# ntfy-mq

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dev.dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  http.http  package.json  prod.dockerfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
notification_service/: __init__.py  main.py  tasks.py
notification_service/api/: endpoints.py  schemas.py
notification_service/core/: config.py
notification_service/models/: __init__.py  responses.py
notification_service/services/: notifications.py
notification_service/tasks/: __init__.py  worker.py
ppt/: Presentaion.html  Presentaion.md
