[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = "Asynchronous Notification System with RabbitMQ & Celery"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "notification_service" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
uvicorn = "^0.24.0"
celery = "^5.3.4"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"